--- a/src/client/components/SettingsForm/SettingsForm.module.css
+++ b/src/client/components/SettingsForm/SettingsForm.module.css
@@ -23,6 +23,10 @@
   width: 100%;
 }
 
+.workTime {
+  flex-direction: row;
+}
+
 @media (max-width: 1023px) {
   .container {
     max-width: 875px;
