--- a/src/client/components/Board/ui/BarChart/BarChart.module.css
+++ b/src/client/components/Board/ui/BarChart/BarChart.module.css
@@ -29,15 +29,20 @@
   align-items: center;
   justify-content: center;
   background-color: #7eb0d5;
-  font: var(--font-text);
-  color: transparent;
   width: 35px;
   height: var(--height);
   overflow: hidden;
+}
+
+.value {
+  font: var(--font-text);
+  color: transparent;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
   transition: color 0.3s ease-in-out;
 }
 
-.column:hover {
+.column:hover .value {
   color: var(--color-bg);
 }
 
